--- a/KafkaProducer/src/main/resources/application.yml
+++ b/KafkaProducer/src/main/resources/application.yml
@@ -6,4 +6,5 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-
+      properties:
+        spring.json.type.mapping: Kargo:com.vektorel.kafkaproducer.dto.KargoKafkaDto
