--- a/KafkaProducer/compose/docker-compose.yml
+++ b/KafkaProducer/compose/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "9092:9092"
     environment:
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
